Modify small things

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <main class="head-main">
             <div class="btn-head">
-                <button type="button" class="btn btn-dark">Start Your Day</button>
+                <button type="button" class="btn btn-dark">Start Your Day!</button>
             </div>
         </main>
     </div>
