--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
-
+    <script src="/main.js"></script>
 </head>
 
 <body>
@@ -59,7 +59,7 @@
 
 
 
-                
+
             </div>
             <div class="breakfast">
                 <div class="container conti">
@@ -212,53 +212,54 @@
 
                         </div>
                     </div>
-            </div>
+                </div>
             </div>
         </main>
 
 
     </div>
 
-   
-<div class="evening">
-    <header class="evening-header">
-        <h1>The End of The Day<br> <span>(for some of us:)</span></h1>
-    </header>
-    <main class="evening-main">
-        <div class="dinner">
-            <div class="container conti">
-                <div class="row">
-                    <div class="col-sm-2 generate"><h1>Dinner</h1>
-                        <button type="button" onclick="calc7(lunch)" class="btn btn-primary">Generate</button>
-                    </div>
-                    <div class="col-sm-3 data">
-                        <h5>Name</h5>
-                        <p class='name' id="name7"></p>
-                    </div>
-                    <div class="col-sm-2 data">
-                        <h5>Type</h5>
-                        <p class='type' id="type7"></p>
-                    </div>
-                    <div class="col-sm-2 data">
-                        <h5>Address</h5>
-                        <p class='address' id="address7"></p>
-                    </div>
-                    <div class="col-sm-3">
-                        <div class="map">
-                            <img class="image1" id="image7" src="" alt="">
+
+    <div class="evening">
+        <header class="evening-header">
+            <h1>The End of The Day<br> <span>(for some of us:)</span></h1>
+        </header>
+        <main class="evening-main">
+            <div class="dinner">
+                <div class="container conti">
+                    <div class="row">
+                        <div class="col-sm-2 generate">
+                            <h1>Dinner</h1>
+                            <button type="button" onclick="calc7(lunch)" class="btn btn-primary">Generate</button>
+                        </div>
+                        <div class="col-sm-3 data">
+                            <h5>Name</h5>
+                            <p class='name' id="name7"></p>
+                        </div>
+                        <div class="col-sm-2 data">
+                            <h5>Type</h5>
+                            <p class='type' id="type7"></p>
+                        </div>
+                        <div class="col-sm-2 data">
+                            <h5>Address</h5>
+                            <p class='address' id="address7"></p>
+                        </div>
+                        <div class="col-sm-3">
+                            <div class="map">
+                                <img class="image1" id="image7" src="" alt="">
+
+                            </div>
 
                         </div>
-
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="sleep">4</div>
-    </main>
+            <div class="sleep">4</div>
+        </main>
 
 
 
-</div>
+    </div>
 
 
 
@@ -272,10 +273,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
         crossorigin="anonymous"></script>
-        <script src="/train.js"></script>
-        <script src="/coffee.js"></script>
-        <script src="/museom.js"></script>
-        <script src="/lunch.js"></script>
+    <script src="/train.js"></script>
+    <script src="/coffee.js"></script>
+    <script src="/museom.js"></script>
+    <script src="/lunch.js"></script>
 
 </body>
 
